# hextazy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml  rust.yml
docs/: architecture.md  roadmap.md
src/: app.rs  main.rs  search.rs  ui.rs
src/ui/: braille.rs
test/demo/: crackme  crackme.c  notes.md
