[package]
name = "hextazy"
version = "0.8.0"
edition = "2021"

authors = ["0xfalafel <olivier@lasne.pro>"]
license = "MIT"
description = "A colorful hexadecimal editor"
readme = "README.md"
homepage = "https://github.com/0xfalafel/hextazy"
repository = "https://github.com/0xfalafel/hextazy"
keywords = ["cli", "hexadecimal", "editor"]
categories = ["command-line-utilities"]

# only publish the source files on crates.io
include = [
  "src/**/*.rs",
  "Cargo.toml"
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.10.5"
